syntax = "proto3";
package service;
import "google/protobuf/Empty.proto";
import "proto/types.proto";

option go_package = "github.com/cometbft/cometbft/scalaris/consensus/proto";

 // Echo is the echo service.
 service ConsensusApi {
   // UnaryEcho is unary echo.
   rpc Echo(types.RequestEcho) returns (types.ResponseEcho);
   rpc GetValidatorInfo(google.protobuf.Empty) returns (types.ValidatorInfo);
   rpc GetValidatorState(google.protobuf.Empty) returns (types.ValidatorState);
   // BidirectionalStreamingScalarAbci is bidi streaming.
   rpc InitTransaction(stream types.ExternalTransaction) returns (stream types.ConsensusOutput) {}
 }
