syntax = "proto3";
package consensus;

option go_package = "github.com/cometbft/cometbft/scalaris/consensus/proto";

message Request {
  oneof value {
    RequestEcho echo = 1;
  }
  reserved 2;
}

message Response {
  oneof value {
    ResponseEcho echo = 1;
  }
  reserved 2;
}

message RequestEcho {
  string message = 1;
}

message ResponseEcho {
  string message = 1;
}

message ValidatorInfo {
  string chain_id = 1;
  bytes pub_key = 2;
  bytes private_key = 3;
  bytes node_private_key = 4;
}

message ValidatorState {
  ValidatorInfo validator_info = 1;
  int64 round = 2;
}
message ExternalTransaction {
    string namespace = 1;   //Namespace used to classify services
    bytes tx_bytes = 2;     //Transaction hash or some raw data 
}

message CommitedTransactions {
    repeated ExternalTransaction transactions = 1;
}